# Skhoot

./: .env  .env.example  .gitignore  .vercelignore  0.1.7-plan.md  ANIMATION_CONSISTENCY_FIX.md  ANIMATION_FLOW_DIAGRAM.md  ANIMATION_INTEGRATION.md  ANIMATION_INTEGRATION_COMPLETE.md  ANIMATION_STICKY_SYSTEM.md  ANIMATION_SYSTEM_FINAL.md  API_KEY_STORAGE_GUIDE.md  ARCHITECTURE.md  App.tsx  BOOKMARK_SYSTEM_IMPLEMENTATION.md  DEBUG_NOTIFICATIONS.md  DEMO_VIDEO_SCRIPT.md  DEVLOG.md  DEVLOG_HIBERNATION_PANIC_FIX.md  DEVLOG_TEMP.md  DEVLOG_TERMINAL_CRASH_FIX.md  DEVLOG_TERMINAL_FIX.md  DEVLOG_TERMINAL_OUTPUT_DEBUG.md  DEVLOG_TERMINAL_UI_CLEANUP.md  FILE_REFERENCE_FEATURE.md  IMAGES_TAB_FEATURE.md  IMAGE_DISPLAY_FEATURE.md  IMAGE_FEATURES_COMPLETE.md  INTEGRATION_SUMMARY.md  LICENSE.md  NOTIFICATIONS_FIXES_SUMMARY.md  PANEL_OVERLAP_FIX.md  PATH_TO_40_SUMMARY.md  README.md  README_VISION.md  RELEASE_NOTES_v0.1.2.md  SESSION_SUMMARY.md  START_TESTING.md  TASK_2.1_TEST_SUMMARY.md  TASK_COMPLETE_FIX.md  (+59 more)
backend/: Cargo.toml  FILE_SEARCH_INTEGRATION.md  SEARCH_ENGINE_SUMMARY.md
backend/examples/: complete_integration.rs  simple_search.rs
backend/migrations/: 001_initial.sql
backend/proptest-regressions/cli_bridge/: tests.txt
backend/proptest-regressions/disk_analyzer/: tests.txt
backend/src/: ai.rs  api_key_storage.rs  config.rs  db.rs  error.rs  indexer.rs  kiro_bridge.rs  lib.rs  main.rs  search.rs
backend/src/api/: agents.rs  agents_tests.rs  disk.rs  mod.rs  recent.rs  search.rs  web_search.rs  workflows.rs
backend/src/cli_agent/: agent.rs  executor.rs  instructions.rs  mod.rs  response.rs  session.rs  tools.rs
backend/src/cli_agent/apply_patch/: invocation.rs  mod.rs  parser.rs  standalone_executable.rs
backend/src/cli_bridge/: PTY_IMPLEMENTATION.md  error.rs  executor.rs  mod.rs  pty.rs  session.rs  tests.rs  types.rs
backend/src/cli_engine/: command_executor.rs  file_operations.rs  mod.rs  tui_interface.rs
backend/src/content_extraction/: cache_manager.rs  content_extractor.rs  http_fetcher.rs  integration_tests.rs  metadata_extractor.rs  mod.rs  ssrf_validator.rs  system.rs  tauri_bridge.rs  types.rs
backend/src/disk_analyzer/: analyzer.rs  categorizer.rs  error.rs  mod.rs  report.rs  scanner.rs  tests.rs  types.rs
backend/src/search_engine/: README.md  ai_integration.rs  cli_engine.rs  file_search.rs  history_manager.rs  mod.rs  search_manager.rs  watcher.rs
backend/src/terminal/: manager.rs  mod.rs  routes.rs  session.rs  snapshot.rs
backend/src/workflows/: engine.rs  mod.rs  storage.rs  triggers.rs  types.rs
backend/tests/: agent_apply_patch_test.rs  executor_list_dir_test.rs  executor_path_test.rs  workflows_test.rs
browser-test/: ai-assistant-settings.ts  commands.md  demo.ts
components/: BackgroundIllumination.tsx  ChatInterface.tsx  Conversations.tsx  DuplicateDetector.tsx  FileSearchTest.tsx  FilesPanel.tsx  InsightsDashboard.tsx  Login.tsx  Messages.tsx  PromptArea.tsx  Register.tsx  SettingsPanel.tsx  Sidebar.tsx  TraceabilityPanel.tsx  UserPanel.tsx  VoiceMessage.tsx
documentation/: CHANGELOG-v0.1.7.md  CHANGELOG-v0.1.8.md  DATAFLOW_ARCHITECTURE.md  EMBOSSED_STYLE_GUIDE.md  FILE_SEARCH_TESTING.md  RELEASE_NOTES_v0.1.3.md  TASK_7_FILE_REFERENCES_COMPLETE.md  TUTORIEL_FIX_RUST_WINDOWS.md  ai-terminal-display.md  goal2.md  responsive.md  terminal-hibernation-integration.md  terminal-hibernation-summary.md  terminal-session-hibernation-design.md  terminal-session-improvements.md  tool-call-ui-improvements.md
hackathon/: kiro-guide.md
hooks/: index.ts  useAgentLogTab.ts  useTauriWindow.ts
scripts/: build-ubuntu.sh  cleanup-duplicate-agents.sh  copy-backend-binary.cjs  copy-backend-binary.js  fix-agent-builder.sh  generate-ico.cjs  generate-icons.cjs  prepare-whispercpp.js  prepare-whispercpp.sh  release.bat  release.ps1  release.sh  test-tool-call-dropdown.sh
services/: README.terminal.md  WorkflowExecutor.ts  activityLogger.ts  agentChatService.ts  agentService.ts  aiService.ts  auth.ts  (+38 more)
src-tauri/: Cargo.toml  Info.plist  WEBVIEW_RENDERER_IMPLEMENTATION.md  entitlements.plist  tauri.conf.json
src-tauri/.kiro/steering/: project-rules.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/deb/: postinst
src-tauri/src/: agent.rs  api_keys.rs  disk_info.rs  http_bridge.rs  main.rs  terminal.rs  webview_renderer.rs  whisper.rs
(+290 files in other folders)
