[package]
name = "skhoot-backend"
version = "0.1.3"
edition = "2021"
default-run = "skhoot-backend"

[[bin]]
name = "skhoot-backend"
path = "src/main.rs"

[[bin]]
name = "file-search-tui"
path = "src/bin/file_search_tui.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
regex = "1.0"
scraper = "0.20"
urlencoding = "2.1"
url = "2.5"
walkdir = "2.0"
notify = "6.0"
pdf-extract = "0.7"
docx-rs = "0.4"
encoding_rs = "0.8"
mime_guess = "2.0"
sha2 = "0.10"
base64 = "0.21"
futures = "0.3"
tokio-stream = "0.1"
crossbeam-channel = "0.5"

# File search dependencies
ignore = "0.4"
nucleo-matcher = "0.3"
tempfile = "3.0"
dirs = "5.0"

# TUI dependencies
crossterm = "0.27"
ratatui = "0.24"
clap = { version = "4.0", features = ["derive"] }

# PTY (Pseudo-Terminal) support for terminal emulation
portable-pty = "0.8"

# Encryption and secure storage
aes-gcm = "0.10"
keyring = "2.3"
rand = "0.8"
hex = "0.4"

# Lazy static for global state
lazy_static = "1.4"
similar = "2.7.0"
tree-sitter = "0.26.3"
tree-sitter-bash = "0.25.1"

# Unix signal handling
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

[dev-dependencies]
proptest = "1.4"
assert_matches = "1.5"
pretty_assertions = "1.4"

# Performance: Release profile optimizations
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Performance: Dev profile with some optimizations for faster iteration
[profile.dev]
opt-level = 1

# Performance: Dependencies optimized even in dev mode
[profile.dev.package."*"]
opt-level = 2
