[package]
name = "src-tauri"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
