[package]
name = "src-tauri"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }
skhoot-backend = { path = "../backend" }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["stream"] }
zip = "0.6"
futures-util = "0.3"
num_cpus = "1.16"

[build-dependencies]
tauri-build = { version = "2", features = [] }
