[package]
name = "src-tauri"
version = "0.1.6"
edition = "2021"
rust-version = "1.75"

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }
skhoot-backend = { path = "../backend" }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["stream"] }
zip = "0.6"
futures-util = "0.3"
num_cpus = "1.16"
axum = "0.7"
tracing = "0.1"

# Linux-only: WebKitGTK for MediaStream/WebRTC support
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

# Windows-only: Windows API for window management
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }


[build-dependencies]
tauri-build = { version = "2", features = [] }
